Working Dto Apis